# Restaurant-Simulator

./: .gitignore  09_INGREDIENT_MODEL.md  HANDOFF.md  QUICKSTART_CAREER_F6.md  README-RS-3D-001.md  README.md  README_RS-IM-001.md  README_RS-RM-001.md  career_week_summary.json  ingredients.json  pyproject.toml
build-workflows/: state.json
build-workflows/audits/: POST-INTEGRATION-verification.md  RS-AU-001-audit.md  RS-CX-001-audit.md  RS-EN-001-audit.md  RS-FE-001-audit.md  RS-GC-001-audit.md  RS-IM-001-audit.md  RS-PL-001-audit.md  RS-SC-001-audit.md  RS-SP-001-audit.md  RS-ST-001-audit.md  RS-VA-001-audit.md
build-workflows/handoffs/: RS-3D-001-handoff.md  (+14 more)
control-pack/: manifest.json
day_00_normal_day_132195522/: alert_validation_dataset.json  end_of_shift_summary.json  hashes.json  inventory_ledger.json  staffing_ledger.json
docs/: 00_WORKFLOW_CONTROL.md  01_PRODUCT_SPEC.md  02_TECHNICAL_ARCHITECTURE.md  03_VARIABLE_CATALOG.md  04_ASC_INTEGRATION_SPEC.md  05_BUILD_PLAN.md  06_REALISM_CALIBRATION.md  07_3D_WORLD_AND_CAMERAS.md  08_CAREER_MODE.md  09_INGREDIENT_MODEL.md
fusion-audit/: access.md  audit.md  core.xml  game.xml  manifest.md  python.xml  status.txt  tree.txt
game/: RestaurantSimulator.csproj  crash.txt  icon.svg.import  project.godot
profiles/: compatibility.json  plausibility.json
restaurant-simulator-(4.3)/: RestaurantSimulator.csproj  project.godot
restaurant_simulator/: __init__.py  cli.py  core.py  engine.py  engine_min.py
tests/: test_compatibility.py  test_engine_contract.py  test_plausibility.py  test_validation_gate.py
(+385 files in other folders)
