[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "restaurant-daily-flow-simulator"
version = "0.1.0"
description = "Deterministic synthetic restaurant operations simulator for ASC-compatible validation streams."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
restaurant-sim = "restaurant_simulator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["restaurant_simulator*"]
